# SWPT_OPT_Angle

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md
.github/workflows/: ci.yml  pages.yml
crates/swpt_core/: Cargo.toml
crates/swpt_core/src/: lib.rs
docs/: algorithm.md  parameters.md  rust_formula_mapping.md
examples/: default_case.json
scripts/: build_wasm.sh  serve_web.sh
web/: index.html
web/pkg/: package.json  swpt_core.d.ts  swpt_core.js  swpt_core_bg.wasm  swpt_core_bg.wasm.d.ts
web/src/: app.js  styles.css
